# liftosaur2garmin

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
api/: index.py
src/liftosaur2garmin/: __init__.py  auth.py  cli.py  config.py  db.py  db_interface.py  db_postgres.py  db_sqlite.py  env.py  fit.py  garmin.py  hevy.py  liftosaur.py  mapper.py  matcher.py  parser.py  server.py  sync.py
src/liftosaur2garmin/templates/: base.html  dashboard.html  history.html  login.html  mappings.html  settings.html  setup.html  workouts.html
tests/: conftest.py  test_auth.py  test_autosync.py  test_cli.py  test_config.py  test_db.py  test_fit.py  test_garmin.py  test_liftosaur.py  test_mapper.py  test_parser.py  test_readme.py  test_server.py  test_set_update.py  test_sync.py
worker/: wrangler.toml
worker-di/: index.js  index.test.js  wrangler.toml
